<resources>
    <string name="app_name">lesson-android</string>

    　　<!-- MainActivity -->
    <string name="main_menu_viewpager2">ViewPager2</string>
    <string name="main_menu_recyclerview">RecyclerView</string>
    <string name="main_menu_glide">Glide</string>
    <string name="main_menu_firebaseanalytics">Firebase Analytics</string>
    <string name="main_menu_dialogfragment">DialogFragment</string>
    <string name="main_menu_retrofit">Retrofit</string>
    <string name="main_menu_qiitaclient">Qiita Client</string>

    <!-- RecyclerView -->
    <string name="recyclerview_vertical_button_text">縦</string>
    <string name="recyclerview_horizontal_button">横</string>
    <string name="recyclerview_grid_button_text">グリッド</string>

    <!-- ViewPager -->
    <string name="viewpager2_content1">Content1</string>
    <string name="viewpager2_content2">Content2</string>
    <string name="viewpager2_content3">Content3</string>
    <string name="viewpager2_content4">Content4</string>

    <!-- Glide -->
    <string name="glide_title">本田 翼</string>

    <!-- Firebase Analytics -->
    <string name="firebase_button_text1">ボタン1</string>
    <string name="firebase_button_text2">ボタン2</string>
    <string name="firebase_button_text3">ボタン3</string>

    <!-- DialogFragment -->
    <string name="dialog_fragment1">ダイアログ1</string>
    <string name="dialog_fragment2">ダイアログ2</string>
    <string name="dialogfragment_dialog1_content">DialogFragmentの課題アプリです。</string>
    <string name="dialogfragment_dialog2_content">YES/NOのログを取得します。</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>

    <!-- Retrofit -->
    <string name="retrofit_get_article">記事取得</string>
    <string name="failed_to_get_article">記事情報の取得に失敗しました</string>

    <!-- QiitaClient -->
    <string name="android">Android</string>
    <string name="firebase">Firebase</string>
    <string name="flutter">Flutter</string>
    <string name="main_menu_todo">ToDo</string>
    <string name="empty_not_saved">タスクが存在しないので、保存出来ませんでした。</string>
    <string name="input_task_hint">追加するタスク名</string>
</resources>
